@@ -27,16 +27,16 @@ pclcomp_LDADD = $(PCLCOMP_LIBS)
 pclcomp_SOURCES =	\
         pclcomp.c
 
-appman_SOURCES = \
+appman_PRE = \
         pclcomp.man
 
 EXTRA_DIST = printer.note
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
